# NeuTTS

./: CLAUDE.md  inference.py  pyproject.toml  requirements-mspoof.txt  train.py
configs/: detector_train.yaml  inference.yaml
docs/: 00_overview.md  01_spoof_detection.md  02_conformer_architecture.md  03_entropy_aware_sampling.md  04_hierarchical_decoding.md  05_training.md  06_evaluation.md  07_base_tts.md  08_related_work.md  09_implementation_plan.md
mspoof_tts/: __init__.py  config.py
mspoof_tts/data/: __init__.py  dataset.py  prepare.py  segment.py
mspoof_tts/evaluation/: __init__.py  evaluate.py  metrics.py
mspoof_tts/models/: __init__.py  conformer.py  multi_resolution.py  spoof_detector.py
mspoof_tts/sampling/: __init__.py  eas.py  hierarchical.py  utils.py
neuttsair/: neutts.py
scripts/: evaluate.sh  inference.sh  prepare_data.sh  train_detectors.sh
tests/: test_eas.py  test_evaluation.py  test_hierarchical.py  test_mspoof_models.py
